# migration_api_pipeline

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci-cd.yml  ci.yml  deploy.yml
docs/: architecture.md  cicd.md  runbook.md
infra/terraform/: README.md
infra/terraform/bootstrap/: apis.tf  assessor_role.tf  deployer_sa.tf  outputs.tf  state_bucket.tf  terraform.tfvars.example  variables.tf  versions.tf  wif.tf
infra/terraform/main/: artifact_registry.tf  bigquery.tf  cloud_run_job.tf  iam.tf  outputs.tf  scheduler.tf  secrets.tf  terraform.tfvars.example  variables.tf  versions.tf
src/migration_pipeline/: __init__.py  __main__.py  client.py  config.py  load.py  logging.py  pipeline.py  schema.py  transform.py  validate.py
tests/integration/: test_load_bigquery.py
tests/unit/: test_client.py  test_load.py  test_pipeline.py  test_skeleton.py  test_transform.py  test_validate.py
