[project]
name = "migration-pipeline"
version = "0.1.0"
description = "Migration-oriented ingestion pipeline: Ducks Unlimited ArcGIS API -> BigQuery"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [{ name = "willdeeep" }]
dependencies = [
    "httpx>=0.28",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "tenacity>=9.0",
    "google-cloud-bigquery>=3.27",
]

[project.scripts]
migration-pipeline = "migration_pipeline.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.14",
    "respx>=0.22",
    "pre-commit>=4.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/migration_pipeline"]

[tool.ruff]
line-length = 100
target-version = "py314"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "RUF"]

[tool.mypy]
python_version = "3.14"
strict = true
files = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --cov=migration_pipeline --cov-report=term-missing"
markers = [
    "integration: tests that hit external services or fixtures of them",
]
